<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_courses">

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.abl.breachthebarrier.ui.main.courses.CoursesFragment"
        android:label="@string/title_courses_menu_item"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.abl.breachthebarrier.ui.main.records.RecordsFragment"
        android:label="@string/title_records_menu_item"
        tools:layout="@layout/fragment_records" />

    <fragment
        android:id="@+id/navigation_leaderboard"
        android:name="com.abl.breachthebarrier.ui.main.leaderboard.LeaderboardFragment"
        android:label="@string/title_leaderboard_menu_item"
        tools:layout="@layout/fragment_leaderboard" />
</navigation>