<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.SignInActivity" >


    <TableLayout
        android:id="@+id/tableLayoutNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/authentication_frame"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/textViewNewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextNewUserName"
                android:paddingBottom="10dp"
                android:text="@string/user_name_label"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextNewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_new_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_new_password"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/password_label"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_text_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text_repeat_new_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_text_repeat_new_password"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/repeat_password_label"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_text_repeat_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textAlignment="center" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutNewUser" />

</androidx.constraintlayout.widget.ConstraintLayout>